# NeoOS

./: .gitignore  .gitmodules  .ninja_log  BUILD.md  README.md  SConstruct  SECURITY.md  bochsrc.bxrc  build-cross.ini  build.ninja  build.py  build_all_stage2  gen_ninja.py  i686-elf.cross  makefile  meson.build  meson_options.txt  notes.txt  p1  toolchain_settings.yml
.zed/: settings.json
BuildSystem.old-Makefile/: makefile
BuildSystem.old-Scons/: SConscript
BuildSystem.old/stage1/: makefile
BuildSystem.old/stage2/: makefile
image/: CreateImage.py  SConscript
image/root/: test.txt
scripts/: bochs.sh  build_image_floppy.sh  build_image_hdd.sh  config.mk  generate_isr.py  list_ASM_files.py  list_C_files.py  run.sh  setup_toolchain.py  toolchain_settings.yaml
scripts/build_scripts/: config.py  phony_targets.py  utility.py
src/boot/: main.asm  string.asm
src/boot/drivers/disk/: disk.asm  fat_headers.asm
src/boot/stage1/: build.ninja  makefile  meson.build  nbootloader.asm
src/boot/stage1/drivers/disk/: disk.asm  fat_headers.asm
src/boot/stage1/drivers/system/: print.asm
src/boot/stage2/: .ninja_log  SConscript  build.ninja  crti.asm  crtn.asm  ctype.err  ctype.h  disk.c  disk.err  disk.h  elf.h  fat.c  fat.err  fat.h  main.c  main.cpp  main.err  makefile  mbr.c  memdefs.h  memory.c  memory.err  memory.h  meson.build  meson.build.old  stage2.asm  stdint.h  stdio.c  stdio.err  stdio.h  string.c  string.err  string.h  utils.err  x86.asm  x86.h
src/boot/stage2.old/: ctype.c  ctype.h  disk.c  disk.h  elf.c  fat.c  fat.h  main.c  mbr.h  memdefs.h  memory.c  memory.h  stdint.h  stdlib.c  stdlib.h  string.c  string.h  utils.c  x86.asm  x86.h
src/boot/stage2/arch/i686/: BiosDisk.cpp  BiosDisk.hpp  RealMemory.hpp  disk.asm  memory.cpp  memory.hpp
src/boot/stage2/cpp/: NewDelete.hpp
src/boot/system/: gdt.asm
src/boot/utils/: print.asm
src/kernel/: SConscript  Sconscript  build.ninja  main.c  makefile  memory.c  meson.build  meson.build.old  nkernel.asm  stdio.c  x86.asm  x86.h
src/kernel/arch/generic/: cpu.c  cpu.h
src/kernel/arch/i686/: gdt.c  i8259.c  idt.c  io.asm  io.c  io.h  irq.c  irq.h  isr.asm  isr.c  isr.h  isrs_gen.c  isrs_gen.inc  pic.c  pic.h
src/kernel/arch/i686/interrupts/: gdt.asm  gdt.c  gdt.h  idt.asm  idt.c  idt.h  irq.c  irq.h  isr.c  isr.h  isr_asm.asm
src/kernel/arch/i686/pic/: i8259.c  i8259.h
src/kernel/hal/: hal.c  hal.h
src/kernel/util/: arrays.h  binary.h
src/libs/core/: Debug.cpp  Debug.hpp  Defs.hpp  makefile  meson.build
src/libs/core/FS/: FATFileSystem.cpp  FATFileSystem.hpp  File.hpp  FileDescriptor.hpp  FileEntry.hpp  FileSystem.cpp  FileSystem.hpp
src/libs/core/FS/FAT/: FATData.hpp  FATFile.cpp  FATFile.hpp  FATFileEntry.cpp  FATFileEntry.hpp  FATHeaders.hpp
src/libs/core/arch/i686/: E9Device.hpp  IO.cpp  IO.hpp  VGATextDevice.cpp  VGATextDevice.hpp  io_asm.asm
src/libs/core/cpp/: Memory.asm  Memory.hpp  TypeTraits.hpp  cppSupport.cpp
src/libs/core/dev/: BlockDevice.hpp  CharacterDevice.hpp  RangedBlockDevice.cpp  RangedBlockDevice.hpp  TextDevice.cpp  TextDevice.hpp
src/libs/core/memory/: Memory.cpp  Memory.hpp  ProtectedMode.inc  StaticObjectPool.hpp  mem.asm
