# NeoOS Build Configuration Options
# ==================================

# Build configuration (debug/release)
option('config', type : 'combo', choices: ['debug', 'release'], value : 'debug', description : 'Build configuration - debug includes symbols and less optimization')


# Disk image type
option('imageType', 
    type: 'combo', 
    choices: ['hdd', 'floppy'], 
    value: 'hdd',
    description: 'Type of disk image to create'
)

# Filesystem type
option('imageFS', 
    type: 'combo', 
    choices: ['fat12', 'fat16', 'fat32'], 
    value: 'fat32',
    description: 'Filesystem for the disk image (fat12 forced for floppy)'
)

# Image size
option('imageSize', 
    type: 'string', 
    value: '32M',
    description: 'Size of the disk image (e.g., 32M, 1G)'
)

# Enable extra warnings
option('extra_warnings',
    type: 'boolean',
    value: true,
    description: 'Enable extra compiler warnings'
)

# Enable static analysis
option('static_analysis',
    type: 'boolean', 
    value: false,
    description: 'Enable static analysis tools (requires additional tools)'
)